--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -48,11 +48,33 @@ android {
 }
 
 dependencies {
+
+//    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
+//    implementation composeBom
+//    androidTestImplementation composeBom
+
+
+
     implementation(libs.androidx.compose.material)
+    implementation(libs.androidx.compose.material3)
+
     implementation(libs.androidx.compose.materialWindow)
     implementation(libs.androidx.compose.material.iconsExtended)
     implementation(libs.androidx.constraintlayout.compose)
     implementation(libs.autosize)
+
+    implementation(libs.androidx.compose.foundation)
+    implementation(libs.androidx.compose.foundation.layout)
+
+    implementation(libs.androidx.compose.runtime)
+    implementation(libs.androidx.compose.runtime.livedata)
+
+
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+
+//    implementation 'androidx.compose.foundation:foundation:1.4.2'
+//    implementation 'androidx.compose.foundation:foundation-layout:1.4.2'
+//    implementation 'androidx.compose.foundation:1.4.2'
 
     implementation(libs.androidx.hilt.navigation.compose)
     implementation(libs.hilt.android)
@@ -67,6 +89,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
+//    implementation 'androidx.compose.foundation:1.4.0-beta02'
 //    implementation 'androidx.compose.material3:material3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
